# continuum

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: ARCHITECTURE_V2.md  CLAUDE.md  IMPLEMENTATION.md  MVP_SPEC.md  PRD.md  REFINEMENT.md  SEED_FILES.md  SUPPLEMENT.md
scripts/: run-mcp-sse.sh
src/continuum/: __init__.py  cli.py  config.py  export.py  files.py  mcp_server.py  voice.py
src/continuum/templates/: config.yaml  context.md  identity.md  memory.md  voice.md
tests/: test_cli.py  test_config.py  test_export.py  test_mcp.py  test_voice.py
